<resources>
    <string name="app_name">Fertility Tracker</string>
    <string name="bottom_nav_entry">Add Entries</string>
    <string name="bottom_nav_chart">View Chart</string>
    <string name="sensations_button_title">Sensations</string>
    <string name="observations_button_title">Observations</string>
    <string name="mucus_button_title">Mucus</string>
    <string name="bleeding_button_title">Bleeding</string>
    <string name="sex_button_title">Sex</string>
    <string name="mood_button_title">Emotions</string>
    <string name="energy_button_title">Energy</string>
    <string name="alert_positive_text">Select</string>
    <string name="notes_hint">Notes about today…</string>
    <string name="mucus_consistency_label">Consistency</string>
    <string name="mucus_color_label">Color</string>
    <string name="mucus_occurrences_label">Daily Occurrences</string>
    <string name="save">Save</string>
    <string name="cycleNumber">Cycle #%1$d</string>
    <string name="previous_date_button_content_desc">Select previous date</string>
    <string name="next_date_button_content_desc">Select next date</string>
    <string name="clear">Clear</string>
    <string name="temperature_title">Basal Temp</string>
    <string name="temperature_divider">.</string>
    <string name="temp_checkbox_text">Was this temperature abnormal?</string>
    <string name="abnormal_temp_hint">Tell us why…</string>
    <string name="cycle_dates">%1$s - %2$s</string>
    <string name="cycle_length">Cycle Length: %1$d days</string>
    <string name="notes_info_content_desc">Tap to see notes</string>
    <string name="notes_dialog_title">%1$s Notes</string>
    <string name="graph_axis_point_8">.8</string>
    <string name="graph_axis_point_6">.6</string>
    <string name="graph_axis_point_4">.4</string>
    <string name="graph_axis_point_2">.2</string>
    <string name="graph_axis_99">99.0</string>
    <string name="graph_axis_98">98.0</string>
    <string name="graph_axis_97">97.0</string>
    <string name="graph_axis_96">96.0</string>
    <string name="graph_axis_95">95.0</string>
    <string name="in_doubt_label">Are you \"In Doubt\" about today\'s fertility?</string>
    <string name="export_option_title">Export Data</string>
    <string name="import_option_title">Import Data</string>
    <string name="filter_option_title">Filter Rows</string>
    <string name="import_error_message">There was an error importing this data. Please recopy your data and try again.</string>
    <string name="export_success_message">Your data has been successfully exported to your clipboard. Paste it somewhere safe.</string>
    <string name="import_dialog_message">This feature is to allow you to import your data that has been previously exported. It it strongly recommended to export your current data before importing, as an import will overwrite all your current tracking data.</string>
    <string name="import_success_message">Your data has been successfully imported!</string>
    <string name="import_data_hint">Serialized JSON data</string>
    <string name="export_cycle_content_desc">Tap to export this cycle to a file</string>
</resources>
