<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/consistencyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mucus_consistency_label"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/consistencyRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/colorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/mucus_color_label"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/colorRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/occurrencesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/mucus_occurrences_label"
        android:textSize="18sp" />

    <com.travijuu.numberpicker.library.NumberPicker
        android:id="@+id/occurrencesPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>