<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="8:04 AM" />

    <LinearLayout
        android:id="@+id/temperatureLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_text">

        <EditText
            android:id="@+id/tempText1"
            style="@style/TemperatureEditText"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="LabelFor"
            tools:text="8" />

        <EditText
            android:id="@+id/tempText2"
            style="@style/TemperatureEditText"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="LabelFor"
            tools:text="8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_divider" />

        <EditText
            android:id="@+id/tempText3"
            style="@style/TemperatureEditText"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="LabelFor"
            tools:text="8" />

        <EditText
            android:id="@+id/tempText4"
            style="@style/TemperatureEditText"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="LabelFor"
            tools:text="8" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/abnormalCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/temp_checkbox_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperatureLayout" />

    <EditText
        android:id="@+id/abnormalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/abnormal_temp_hint"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abnormalCheckbox"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>